Changed all layout issues

--- a/gsap/gsap.css
+++ b/gsap/gsap.css
@@ -60,7 +60,7 @@ body.scrollPathDisabled{
 
 .screen1__logo {
   position: absolute;
-  left: 20rem;
+  left: 10rem;
   top: 20rem;
 }
 
